--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
 					<li>2023: Shanghai Jiao Tong University Zhao Zhumulan Doctoral First-Class Scholarship</li>
 					<li>2023: China Scholarship Council’s International Cooperation Training Project for Innovative Talents</li>
 					<li>2023: Special prize in the 18th “Dongfeng Nissan Cup” Tsinghua IE Liangjian National Industrial Engineering Application Case Competition</li>
-                                        <li>2023: Bronze Award in the Shanghai Division of the 9th China International “Internet+” College Students Innovation and Entrepreneurship Competition</li>
+                    <li>2023: Bronze Award in the Shanghai Division of the 9th China International “Internet+” College Students Innovation and Entrepreneurship Competition</li>
 					<li>2021: Shanghai Jiao Tong University Huihe Medical Scholarship</li>
 					<li>2021: The third prize in the 16th "Dongfeng Nissan Cup" Tsinghua IE Liangjian National Industrial Engineering Application Case Competition in 2021</li>					
 					<li>2021, 2022: Three Good Students and Outstanding League Cadres of Shanghai Jiao Tong University</li>			
@@ -182,7 +182,7 @@
 				<ul>
 					<li><font color=#007799>Member</font> of IEEE and Operations Research Society of China. </font> </li>
 					<li><font color=#007799>Serve as</font> co-chair for 8th Stochastic Modelling Meeting. </font> </li>
-                                        <li><font color=#007799>Reviewer</font> of IEEE Transactions on Automation Science and Engineering, Computers & Operations Research, Computers & Industrial Engineering, Flexible Services and Manufacturing Journal, International Journal of Computer Integrated Manufacturing. </font> </li> 
+                    <li><font color=#007799>Reviewer</font> of IEEE Transactions on Automation Science and Engineering, International Journal of Production Research, Neurocomputing, Computers & Operations Research, Computers & Industrial Engineering, Flexible Services and Manufacturing Journal, International Journal of Computer Integrated Manufacturing. </font> </li> 
 					<li><font color=#007799>03/2021 – 03/2022: </font> Secretary of Doctoral League Branch of the Department of Industrial Engineering and Management, Shanghai Jiao Tong University. </font> </li>
 					<li><font color=#007799>09/2020 – 06/2022: </font> Member of the Ministerial Group of the Graduate Student Council of the School of Mechanical Engineering, Shanghai Jiao Tong University. </font> </li>
 				</ul>
@@ -252,6 +252,7 @@
 
 </body>
 </html>
+
 
 
 
