--- a/index.html
+++ b/index.html
@@ -137,8 +137,8 @@
 				<ul>	
 					<li><font color=#007799>10/2023 -- 02/2025:</font> PhD.Eng. student in Department of Mechanical Engineering, Politecnico di Milano, Milan </li>
 					<li><font color=#007799>09/2019 -- 12/2025:</font> PhD.Eng. student in Department of Industrial Engineering and Management, Shanghai Jiao Tong University, Shanghai </li>
-					<li><font color=#007799>09/2015 -- 07/2019:</font> B.Eng. student in School. of Information Management, Nanjing Agricultural University, Nanjing </li>
-					<li><font color=#007799>09/2012 -- 07/2015:</font> High school. student in the First high school of Handan city, Hebei</li>
+					<li><font color=#007799>09/2015 -- 07/2019:</font> B.Eng. student in School of Information Management, Nanjing Agricultural University, Nanjing </li>
+					<li><font color=#007799>09/2012 -- 07/2015:</font> High school student in the First high school of Handan city, Hebei</li>
 				</ul>	
 				
 				<a name="interests"></a>				
@@ -252,6 +252,7 @@
 
 </body>
 </html>
+
 
 
 
