--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
 				</ul>
 				
 				<a name="working experiences"></a>				
-				<h2>Educations</h2>
+				<h2>Working Experiences</h2>
 				
 				<ul>	
 					<li><font color=#007799>01/2026 -- now:</font> Lecturer in Department of Industrial Engineering, Wuhan University of Technology, Wuhan </li>
@@ -252,6 +252,7 @@
 
 </body>
 </html>
+
 
 
 
