--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 				<br>My  current research interests include analysis, modelling, and decision-making optimization for the operations management problems in manufacturing systems and service systems. My technical specialties include mathematical modeling, stochastic optimization, exact optimization algorithm, intelligent optimization algorithm, statistical modeling analysis, simulation optimization. 
 				<br>My researchgate is <a href="https://www.researchgate.net/profile/Xiaoxiao-Shen-2", target="_blank"><strong>here</strong></a>. 
 				<br>My ORCiD is <a href="https://orcid.org/0000-0003-1396-8451", target="_blank"><strong>here</strong></a>.
-				<br>My phone (Wechat): 18521308203.	
+				<br>My Google Scholar is <a href="https://scholar.google.com/citations?hl=zh-CN&user=naKZhO4AAAAJ&view_op=list_works&sortby=pubdate", target="_blank"><strong>here</strong></a>.
 				<br>My email: sjtusxx98@sjtu.edu.cn; xiaoxiao.shen@polimi.it.
 				<br><br>A beautiful song <strong>"やわらかな光"</strong> is sent to you.<br></br>
 				<audio id="music1" controls="controls" autoplay="autoplay" "loop"="loop" preload id="music1">
@@ -252,6 +252,7 @@
 
 </body>
 </html>
+
 
 
 
